<resources>
    <string name="app_name">Cool Calorie Calculator</string>
    <string name="action_settings">Settings</string>


    <string name="reps">Reps</string>
    <string name="minutes">Minutes</string>
    <string name="calories">Calories burned: </string>
    <string name="pushup">Pushups</string>
    <string name="situp">Situps</string>
    <string name="jumpingjack">Jumping Jacks</string>
    <string name="jogging">Jogging</string>
    <string name="squat">Squats</string>
    <string name="leglift">Leg Lifts</string>
    <string name="plank">Plank</string>
    <string name="pullup">Pull ups</string>
    <string name="cycling">Cycling</string>
    <string name="walking">Walking</string>
    <string name="swimming">Swimming</string>
    <string name="stair">Stair Climbing</string>
    <string-array name="exercises_array">
        <item>Pushups</item>
        <item>Situps</item>
        <item>Jumping Jacks</item>
        <item>Jogging</item>
    </string-array>

</resources>
