<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aaron.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/input_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="80dp">

        <Spinner
            android:id="@+id/input_fitness_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/number_input"
            android:inputType="number"
            android:textSize="20sp"
            android:maxLength="4"
            android:layout_width="60dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/minute_reps"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="110dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:id="@+id/dummy_view"
        android:layout_width="400dp"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_height="1dp"
        android:layout_below="@id/input_layout"
        />

    <LinearLayout
        android:id="@+id/calories_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/dummy_view">

        <TextView
            android:textSize="22sp"
            android:text="@string/calories"
            android:layout_width="180dp"
            android:layout_height="40dp" />

        <TextView
            android:textSize="22sp"
            android:id="@+id/calories_number"
            android:layout_width="100dp"
            android:layout_height="40dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/pushup_out_label"
        android:background="@color/coolColor"
        android:layout_below="@id/calories_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp">

        <TextView
            android:textSize="20sp"
            android:text="@string/pushup"
            android:layout_width="180dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/pushup_out_number"
            android:textSize="20sp"
            android:layout_width="170dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/situp_out_label"
        android:layout_below="@id/pushup_out_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp">

        <TextView
            android:text="@string/situp"
            android:textSize="20sp"
            android:layout_width="180dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/situp_out_number"
            android:textSize="20sp"
            android:layout_width="170dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/jumpingjack_out_label"
        android:background="@color/coolColor"
        android:layout_below="@id/situp_out_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp">

        <TextView
            android:text="@string/jumpingjack"
            android:textSize="20sp"
            android:layout_width="180dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/jumpingjack_out_number"
            android:textSize="20sp"
            android:layout_width="170dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/jogging_out_label"
        android:layout_below="@id/jumpingjack_out_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp">

        <TextView
            android:text="@string/jogging"
            android:textSize="20sp"
            android:layout_width="180dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/jogging_out_number"
            android:textSize="20sp"
            android:layout_width="170dp"
            android:layout_height="40dp" />
    </LinearLayout>








</RelativeLayout>
